--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "UI kit for znyatok",
   "version": "0.2.1",
   "scripts": {
-    "dist": "sass --style=compressed source/index.scss dist/zuik.min.css",
+    "dist": "sass --style=compressed --no-source-map source/index.scss dist/zuik.min.css",
     "watch": "live-server --browser='Google Chrome' --watch=dist & sass --watch source/index.scss:dist/zuik.min.css"
   },
   "keywords": [
